@@ -19,8 +19,8 @@ package org.apache.lucene.util.mutable;
 import java.util.Date;
 
 /**
- * {@link MutableValue} implementation of type 
- * {@link Date}.
+ * {@link MutableValue} implementation of type {@link Date}.
+ * @see MutableValueLong
  */
 public class MutableValueDate extends MutableValueLong {
   @Override
