@@ -17,14 +17,17 @@
 package org.apache.lucene.util.mutable;
 
 /**
- * {@link MutableValue} implementation of type 
- * <code>long</code>.
+ * {@link MutableValue} implementation of type <code>long</code>.
+ * When mutating instances of this object, the caller is responsible for ensuring 
+ * that any instance where <code>exists</code> is set to <code>false</code> must also 
+ * <code>value</code> set to <code>0L</code> for proper operation.
  */
 public class MutableValueLong extends MutableValue {
   public long value;
 
   @Override
   public Object toObject() {
+    assert exists || 0L == value;
     return exists ? value : null;
   }
 
@@ -45,12 +48,14 @@ public class MutableValueLong extends MutableValue {
 
   @Override
   public boolean equalsSameType(Object other) {
+    assert exists || 0L == value;
     MutableValueLong b = (MutableValueLong)other;
     return value == b.value && exists == b.exists;
   }
 
   @Override
   public int compareSameType(Object other) {
+    assert exists || 0L == value;
     MutableValueLong b = (MutableValueLong)other;
     long bv = b.value;
     if (value<bv) return -1;
@@ -62,6 +67,7 @@ public class MutableValueLong extends MutableValue {
 
   @Override
   public int hashCode() {
+    assert exists || 0L == value;
     return (int)value + (int)(value>>32);
   }
 }
